# simplediff-sop

./: simplediff-sop.cabal
src/Generics/SOP/: SimpleDiff.hs
