name: simplediff-sop
version: 0.1
build-type: Simple
cabal-version: >= 1.10

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
    Generics.SOP.SimpleDiff
  build-depends:
    base >= 4.9 && < 5,
    ansi-terminal >= 0.6 && < 0.7,
    generics-sop >= 0.3 && < 0.4,
    text >= 1.2 && < 1.3
