name: simplediff-sop
version: 0.1
build-type: Simple
cabal-version: >= 1.10

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:
    Generics.SOP.SimpleDiff
  build-depends:
    base >= 4.9 && < 5,
    generics-sop >= 0.3 && < 0.4,
    prettyprinter >= 1.1 && < 1.2,
    prettyprinter-ansi-terminal >= 1.1.1.1 && < 1.2,
    text >= 1.2 && < 1.3
